@@ -1424,7 +1424,9 @@ var lmsBrowse = Vue.component("lms-browse", {
         processMyMusicMenu() {
             this.myMusic.sort(weightSort);
             for (var i=0, len=this.myMusic.length; i<len; ++i) {
-                this.myMusic[i].menu=[this.options.pinned.has(this.myMusic[i].id) ? UNPIN_ACTION : PIN_ACTION];
+                if (this.myMusic[i].id!=COMPILATIONS_ID) {
+                    this.myMusic[i].menu=[this.options.pinned.has(this.myMusic[i].id) ? UNPIN_ACTION : PIN_ACTION];
+                }
             }
             if (this.current && TOP_MYMUSIC_ID==this.current.id) {
                 this.items = this.myMusic;
