@@ -6,6 +6,8 @@
 3. Fix mapping of icons in apps.
 4. When splitting release lists into groups, only group releases with
    'compilation=1' into 'Compilations' if they have no explicit release type.
+5. Don't allow 'Compilations' entry to be pinned, as this has 'artist_id:'
+   parameter that can change.
 
 5.8.3
 -----
